--- a/src/app/components/produit/produit.component.html
+++ b/src/app/components/produit/produit.component.html
@@ -4,41 +4,52 @@
 
     <div *ngIf="hideAdd" class="container py-4"> 
         
-        <button type="button" style="width: 150px;" (click)="add()" class="btn btn-outline-primary">new</button>
+        <button type="button" style="width: 150px;" (click)="add()" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-primary">new</button>
     </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h2 *ngIf="addButton"  class="modal-title" id="exampleModalLabel">Ajouter Produit</h2>
+              <h2 *ngIf="!addButton"  class="modal-title" id="exampleModalLabel">Modifier Produit</h2>
+              <button type="button" style="border: 1px solid red;border-radius: 3px; background-color: red;"(click)="add()" class="close" data-dismiss="modal" aria-label="Close">
+                <span style="color: white;" aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="addProduit">
+                    <div class="col-md">
+                        <mat-form-field style="width: 100%;">
+                            <mat-select placeholder="Probleme"  [(ngModel)]="problemes" formControlName="Probleme" multiple>
+                                <mat-option>
+                                    <ngx-mat-select-search noEntriesFoundLabel="'Aucun Probleme'" placeholderLabel="Cherche" (keyup)="fProbleme($event)"></ngx-mat-select-search>
+                                </mat-option>
+                              <mat-option *ngFor="let item of probleme" [value]="item.id" >{{item.name}}</mat-option>
+                            </mat-select>
+                          </mat-form-field>
+                        <div class="form-group  py-2">
+                            <label for="produit">Produit</label>
+                            <input [(ngModel)]="produitSelected.name" (keyup)="chercher($event.target)" formControlName="produit" type="text" name="produit" class="form-control" >
+                            <small *ngIf="produit.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+                            <small *ngIf="deja" id="fileHelpId" style="color: red;" class="form-text"> * existe deja  </small>
+                        </div>
+                       
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" (click)="add()" data-dismiss="modal">Annuler</button>
+              <button *ngIf="addButton" class="btn btn-success" (click)="addNew()" [disabled]="addProduit.invalid " data-dismiss="modal" type="submit">Ajouter</button>
+              <button *ngIf="!addButton" class="btn btn-warning" (click)="modProduit(produitSelected)" [disabled]="addProduit.invalid" data-dismiss="modal" type="submit">Modifier</button>
+       
+            </div>
+          </div>
+        </div>
+      </div>
    
 <div *ngIf="!hideAdd" class="container mt-5">
-    <form [formGroup]="addProduit">
-        <div class="col-md-6 ml-md-auto">
-            <mat-form-field>
-                <mat-select placeholder="Probleme"  [(ngModel)]="problemes" formControlName="Probleme" multiple>
-                    <mat-option>
-                        <ngx-mat-select-search noEntriesFoundLabel="'Aucun Probleme'" placeholderLabel="Cherche" (keyup)="fProbleme($event)"></ngx-mat-select-search>
-                    </mat-option>
-                  <mat-option *ngFor="let item of probleme" [value]="item.id" >{{item.name}}</mat-option>
-                </mat-select>
-              </mat-form-field>
-            <div class="form-group md-5 py-2">
-                <label for="produit">Produit</label>
-                <input [(ngModel)]="produitSelected.name" (keyup)="chercher($event.target)" formControlName="produit" type="text" name="produit" class="form-control" >
-                <small *ngIf="produit.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
-                <small *ngIf="deja" id="fileHelpId" style="color: red;" class="form-text"> * existe deja  </small>
-            </div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col">
-                        <button *ngIf="addButton" class="btn btn-success btn-block" (click)="addNew()" [disabled]="addProduit.invalid " type="submit">Ajouter</button>
-                        <button *ngIf="!addButton" class="btn btn-warning btn-block" (click)="modProduit(produitSelected)" [disabled]="addProduit.invalid" type="submit">Modifier</button>
-                    </div>
-                    <div class="col">
-                        <button class="btn btn-secondary btn-block" (click)="add()" type="submit">Annuler</button>
-                    </div>
-                </div>
-                
-                
-            </div> 
-        </div>
-    </form>
+   
     <hr>
 </div>
 
@@ -68,7 +79,7 @@
         </ng-container>
         <ng-container matColumnDef="mod">
             <mat-header-cell *matHeaderCellDef> Modifier </mat-header-cell>
-            <mat-cell *matCellDef="let element"> <button (click)="onMod(element)" class="btn btn-primary" >mod</button> </mat-cell>
+            <mat-cell *matCellDef="let element"> <button (click)="onMod(element)" data-toggle="modal" data-target="#exampleModal" class="btn btn-primary" >mod</button> </mat-cell>
         </ng-container>
         <ng-container matColumnDef="supp">
             <mat-header-cell *matHeaderCellDef > Supprimer </mat-header-cell>
