--- a/src/app/components/produit/produit.component.css
+++ b/src/app/components/produit/produit.component.css
@@ -6,3 +6,5 @@ mat-table{
     border: 1px solid rgb(182, 180, 180);
     border-radius: 5px;
 }
+
+::ng-deep .cdk-overlay-container { z-index: 9999;}
