--- a/src/app/components/solution/solution.component.html
+++ b/src/app/components/solution/solution.component.html
@@ -4,10 +4,47 @@
         
         <div *ngIf="hideAdd" class="container py-4"> 
             
-            <button type="button" style="width: 150px;" (click)="add()" class="btn btn-outline-primary">new</button>
+            <button type="button" data-toggle="modal" data-target="#exampleModal" style="width: 150px;" (click)="add()" class="btn btn-outline-primary">new</button>
         </div>
+
+      
+          
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h2 *ngIf="addButton"  class="modal-title" id="exampleModalLabel">Ajouter Solution</h2>
+                  <h2 *ngIf="!addButton"  class="modal-title" id="exampleModalLabel">Modifier Solution</h2>
+                  <button type="button" style="border: 1px solid red;border-radius: 3px; background-color: red;"(click)="add()" class="close" data-dismiss="modal" aria-label="Close">
+                    <span style="color: white;" aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                    <form [formGroup]="addSolution">
+                        <div class="col-md ml-md-auto">
+                            
+                            <div class="form-group py-2">
+                                <label for="sollution">Solution</label>
+                                <input [(ngModel)]="Solution.name" (keyup)="chercher($event.target)" formControlName="solution" type="text" name="solution" class="form-control">
+                                <small *ngIf="solution.invalid" id="fileHelpId" style="color: red;" class="form-text"> ** </small>
+                                <small *ngIf="deja" id="fileHelpId" style="color: red;" class="form-text"> * existe deja  </small>
+                            </div>
+                           
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" (click)="add()" data-dismiss="modal">Annuler</button>
+                  
+                  <button type="button" *ngIf="addButton"  (click)="addNew()" data-dismiss="modal" [disabled]="solution.invalid " class="btn btn-success">Ajouter</button>
+                  <button type="button" *ngIf="!addButton" class="btn btn-warning" (click)="modSolution(Solution)" data-dismiss="modal" [disabled]="solution.invalid">Modifier</button>
+                </div>
+              </div>
+            </div>
+          </div>
        
-        <div *ngIf="!hideAdd" class="container mt-5">
+        <!-- <div *ngIf="!hideAdd"  class="container mt-5">
             <form [formGroup]="addSolution">
                 <div class="col-md-4 ml-md-auto">
                     
@@ -34,7 +71,7 @@
             </form>
             <hr>
             
-        </div>
+        </div> -->
         
         
         <div class="container">
@@ -42,6 +79,7 @@
                 <input class="form-control" (keyup)="filter($event.target)" placeholder="Filter">
             
         </div>
+       
         
         <div class="container col-md-12  table-responsive">
             
@@ -61,7 +99,7 @@
                 </ng-container>
                 <ng-container matColumnDef="mod">
                     <mat-header-cell *matHeaderCellDef> Modifier </mat-header-cell>
-                    <mat-cell *matCellDef="let element"> <button *ngIf="element.id!=4" (click)="onMod(element)" class="btn btn-primary" >mod</button> </mat-cell>
+                    <mat-cell *matCellDef="let element"> <button *ngIf="element.id!=4" data-toggle="modal" data-target="#exampleModal" (click)="onMod(element)" class="btn btn-primary" >mod</button> </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="supp">
                     <mat-header-cell *matHeaderCellDef > Supprimer </mat-header-cell>
