--- a/src/app/components/test/test.component.css
+++ b/src/app/components/test/test.component.css
@@ -62,7 +62,23 @@ mat-table{
     justify-content: center;
 }
 
+
+
+#filterInputIconeCancel, #filterInputIconeSearche{
+    position: relative;
+    transform: translate(-10px, -29px);
+    left: 98%;
+
+}
+
 @media only screen and (max-width: 480px) {
+    #filterInputIconeCancel, #filterInputIconeSearche{
+        position: relative;
+        transform: translate(-15px, -29px);
+        left: 98%;
+    
+    }
+    
     .detail{
         z-index: 1;
         position: fixed;
